--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <p class="text">Copyright @ 2017 <a href="http://blog.lmeoo.com/">Moexin's Blog</a> | <a target="_blank" href="http://www.miitbeian.gov.cn/">桂ICP备16001758号-1</a> | Powered by <a href="//lmeoo.com" target="_blank">Moexin</a> | <a target="_blank" href="//uptime.statuscake.com/?TestID=EYMY0A1xb7">Monitor</a></p>
       </div>
     </div>
 
